AKS/AGIC-Ingress-Paths/kube-manifests/NginxApp1-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          # image: unpluggedkk/kubenginx:v1
          image: unpluggedkk/kubenginx-app1:v1
          ports:
            - containerPort: 80
