AKS/AGIC-Ingress-Paths/kube-manifests/Ingress-HTTP-Paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          # - path: /       # Comment at Update Ingress Path, Deploy and Verify step
          - path: /app1  # UnComment at Update Ingress Path, Deploy and Verify step
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
